--- a/src/FlightComputer/.project
+++ b/src/FlightComputer/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>FlightComputer</name>
-	<comment></comment>
+	<comment />
 	<projects>
 	</projects>
 	<buildSpec>
@@ -27,5 +27,5 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>fr.ac6.mcu.ide.core.MCUMultiCoreProjectNature</nature>
 		<nature>fr.ac6.mcu.ide.core.MCUMultiCoreProjectNature</nature>
-	</natures>
+	<nature>fr.ac6.mcu.ide.core.MCUMultiCoreProjectNature</nature><nature>fr.ac6.mcu.ide.core.MCUMultiCoreProjectNature</nature></natures>
 </projectDescription>
