--- a/src/Test/FC_Test/CM7/.project
+++ b/src/Test/FC_Test/CM7/.project
@@ -42,6 +42,11 @@
 			<locationURI>PARENT-1-PROJECT_LOC/Drivers/Peripherals/Src/UART.c</locationURI>
 		</link>
 		<link>
+			<name>Drivers/Peripherals/qspi_drv.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Drivers/Peripherals/Src/qspi_drv.c</locationURI>
+		</link>
+		<link>
 			<name>Drivers/STM32H7xx_HAL_Driver/stm32h7xx_hal.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c</locationURI>
