--- a/src/Test/FC_Test/CM7/.project
+++ b/src/Test/FC_Test/CM7/.project
@@ -37,6 +37,11 @@
 			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/Common</locationURI>
 		</link>
 		<link>
+			<name>Drivers/Peripherals/epd_drv.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Drivers/Peripherals/Src/epd_drv.c</locationURI>
+		</link>
+		<link>
 			<name>Drivers/Peripherals/qspi_drv.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Drivers/Peripherals/Src/qspi_drv.c</locationURI>
